--- a/src/components/EditSubscriber/style.css
+++ b/src/components/EditSubscriber/style.css
@@ -1,10 +1,10 @@
 .ReactModal__Content {
   padding: 0 !important;
   overflow: auto;
-  width: 100vw;
   inset: 40px 0 0 0 !important;
   border-radius: 10px !important;
-  border-top: 1px solid #eee !important;
+  border: 1px solid #eee !important;
+  width: unset;
 }
 
 .ReactModal__Overlay {
