--- a/src/components/MainHeader/style.css
+++ b/src/components/MainHeader/style.css
@@ -1,5 +1,5 @@
 .ui-main-header {
-  height: 60px;
+  height: 70px;
   padding-left: 20px;
   padding-right: 20px;
   border-bottom: 1px solid #eee;
@@ -15,5 +15,16 @@
   color: #444;
   font-size: 17px;
   position: absolute;
-  left: calc(50% - 30px);
+  left: calc(50% - 200px);
+  width: 400px;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ui-main-header-label p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
